<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".TaskActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/task1wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">
                <TextView
                    android:id="@+id/task1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/task1" />
                <ImageView
                    android:id="@+id/task1Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/task1"
                    android:layout_marginTop="8dp" />
                <TextView
                    android:id="@+id/task1text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Текст задания 1"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/task1Image" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/task2wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">
                <TextView
                    android:id="@+id/task2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/task2" />
                <TextView
                    android:id="@+id/task2text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Текст задания 2"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/task2" />
                <Button
                    android:id="@+id/text_switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Скрыть текст"
                    app:layout_constraintTop_toBottomOf="@+id/task2text" />
                <TextView
                    android:id="@+id/task1text_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Текст задания 1 (повтор)"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_switch_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/task3selectwrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">
                <TextView
                    android:id="@+id/task3select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/task3select" />
                <Button
                    android:id="@+id/task3_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingVertical="12dp"
                    android:text="@string/task3_1"
                    app:layout_constraintTop_toBottomOf="@+id/task3select" />
                <Button
                    android:id="@+id/task3_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingVertical="12dp"
                    android:text="@string/task3_2"
                    app:layout_constraintTop_toBottomOf="@+id/task3_1" />
                <Button
                    android:id="@+id/task3_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingVertical="12dp"
                    android:text="@string/task3_3"
                    app:layout_constraintTop_toBottomOf="@+id/task3_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/task3wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">
                <TextView
                    android:id="@+id/task3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="Задание 3" />
                <ImageView
                    android:id="@+id/task3Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/task3" />
                <TextView
                    android:id="@+id/task3text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/task3Image"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/task4wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/task4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="Задание 4. Ответы на вопросы" />
                <TextView
                    android:id="@+id/task4text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/task4"/>
                <Button
                    android:id="@+id/button_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:text="Закончить"
                    app:layout_constraintTop_toBottomOf="@+id/task4text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow_left"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/arrow_right"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>